Primera Entrega/y.output
Terminals unused in grammar

   STRING
   C_A
   C_C


Gramática

    0 $accept: programa $end

    1 programa: program

    2 program: sentencia
    3        | program sentencia

    4 $@1: /* vacío */

    5 sentencia: DEFVAR $@1 declaraciones ENDDEF
    6          | ID ASIG_ESP ID
    7          | asignacion PUNTO_Y_COMA
    8          | decision
    9          | iteracion
   10          | let
   11          | entrada
   12          | salida

   13 declaraciones: declaracion
   14              | declaraciones declaracion

   15 declaracion: INT DOSPUNTOS lista_ids
   16            | FLOAT DOSPUNTOS lista_ids

   17 lista_ids: ID
   18          | lista_ids PUNTO_Y_COMA ID

   19 asignacion: ID OP_ASIG expresion
   20           | ID OP_ASIG constanteString

   21 entrada: DISPLAY ID PUNTO_Y_COMA
   22        | DISPLAY constanteString PUNTO_Y_COMA

   23 salida: GET ID PUNTO_Y_COMA

   24 iteracion: WHILE P_A condicion P_C L_A sentencia L_C

   25 decision: IF P_A condicion P_C L_A sentencia L_C

   26 $@2: /* vacío */

   27 $@3: /* vacío */

   28 decision: IF P_A condicion P_C L_A sentencia L_C $@2 ELSE $@3 L_A sentencia L_C

   29 condicion: expresion CMP_MAY expresion
   30          | expresion CMP_MEN expresion
   31          | expresion CMP_MAYI expresion
   32          | expresion CMP_MENI expresion
   33          | expresion CMP_DIST expresion
   34          | expresion CMP_IGUAL expresion
   35          | P_A condicion P_C AND P_A condicion P_C
   36          | P_A condicion P_C OR P_A condicion P_C
   37          | NOT expresion CMP_MAY expresion
   38          | NOT expresion CMP_MEN expresion
   39          | NOT expresion CMP_MAYI expresion
   40          | NOT expresion CMP_MENI expresion
   41          | NOT expresion CMP_DIST expresion
   42          | NOT expresion CMP_IGUAL expresion

   43 expresion: expresion OP_SUM termino
   44          | expresion OP_RES termino
   45          | termino

   46 termino: termino OP_MUL factor
   47        | termino OP_DIV factor
   48        | factor

   49 factor: P_A expresion P_C
   50       | ID
   51       | constanteNumerica

   52 constanteNumerica: CONST_INT
   53                  | CONST_REAL

   54 constanteString: CONST_STR

   55 let: LET_SIM cont_ids OP_IGUAL P_A cont_exp P_C

   56 cont_ids: cont_ids COMA ID
   57         | ID

   58 cont_exp: cont_exp PUNTO_Y_COMA expresion
   59         | expresion


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
ASIG_ESP (258) 6
DEFVAR (259) 5
ENDDEF (260) 5
INT (261) 15
FLOAT (262) 16
STRING (263)
CONST_REAL (264) 53
CONST_INT (265) 52
CONST_STR (266) 54
DISPLAY (267) 21 22
GET (268) 23
IF (269) 25 28
ELSE (270) 28
WHILE (271) 24
P_A (272) 24 25 28 35 36 49 55
P_C (273) 24 25 28 35 36 49 55
C_A (274)
C_C (275)
L_A (276) 24 25 28
L_C (277) 24 25 28
PUNTO_Y_COMA (278) 7 18 21 22 23 58
COMA (279) 56
DOSPUNTOS (280) 15 16
CMP_MAY (281) 29 37
CMP_MEN (282) 30 38
CMP_MAYI (283) 31 39
CMP_MENI (284) 32 40
CMP_DIST (285) 33 41
CMP_IGUAL (286) 34 42
OP_SUM (287) 43
OP_RES (288) 44
OP_DIV (289) 47
OP_MUL (290) 46
AND (291) 35
OR (292) 36
NOT (293) 37 38 39 40 41 42
ID (294) 6 17 18 19 20 21 23 50 56 57
OP_ASIG (295) 19 20
LET_SIM (296) 55
OP_IGUAL (297) 55


No terminales con las reglas donde aparecen

$accept (43)
    en la izquierda: 0
programa (44)
    en la izquierda: 1, en la derecha: 0
program (45)
    en la izquierda: 2 3, en la derecha: 1 3
sentencia (46)
    en la izquierda: 5 6 7 8 9 10 11 12, en la derecha: 2 3 24 25 28
$@1 (47)
    en la izquierda: 4, en la derecha: 5
declaraciones (48)
    en la izquierda: 13 14, en la derecha: 5 14
declaracion (49)
    en la izquierda: 15 16, en la derecha: 13 14
lista_ids (50)
    en la izquierda: 17 18, en la derecha: 15 16 18
asignacion (51)
    en la izquierda: 19 20, en la derecha: 7
entrada (52)
    en la izquierda: 21 22, en la derecha: 11
salida (53)
    en la izquierda: 23, en la derecha: 12
iteracion (54)
    en la izquierda: 24, en la derecha: 9
decision (55)
    en la izquierda: 25 28, en la derecha: 8
$@2 (56)
    en la izquierda: 26, en la derecha: 28
$@3 (57)
    en la izquierda: 27, en la derecha: 28
condicion (58)
    en la izquierda: 29 30 31 32 33 34 35 36 37 38 39 40 41 42, en la derecha:
    24 25 28 35 36
expresion (59)
    en la izquierda: 43 44 45, en la derecha: 19 29 30 31 32 33 34
    37 38 39 40 41 42 43 44 49 58 59
termino (60)
    en la izquierda: 46 47 48, en la derecha: 43 44 45 46 47
factor (61)
    en la izquierda: 49 50 51, en la derecha: 46 47 48
constanteNumerica (62)
    en la izquierda: 52 53, en la derecha: 51
constanteString (63)
    en la izquierda: 54, en la derecha: 20 22
let (64)
    en la izquierda: 55, en la derecha: 10
cont_ids (65)
    en la izquierda: 56 57, en la derecha: 55 56
cont_exp (66)
    en la izquierda: 58 59, en la derecha: 55 58


estado 0

    0 $accept: . programa $end

    DEFVAR   desplazar e ir al estado 1
    DISPLAY  desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    IF       desplazar e ir al estado 4
    WHILE    desplazar e ir al estado 5
    ID       desplazar e ir al estado 6
    LET_SIM  desplazar e ir al estado 7

    programa    ir al estado 8
    program     ir al estado 9
    sentencia   ir al estado 10
    asignacion  ir al estado 11
    entrada     ir al estado 12
    salida      ir al estado 13
    iteracion   ir al estado 14
    decision    ir al estado 15
    let         ir al estado 16


estado 1

    5 sentencia: DEFVAR . $@1 declaraciones ENDDEF

    $default  reduce usando la regla 4 ($@1)

    $@1  ir al estado 17


estado 2

   21 entrada: DISPLAY . ID PUNTO_Y_COMA
   22        | DISPLAY . constanteString PUNTO_Y_COMA

    CONST_STR  desplazar e ir al estado 18
    ID         desplazar e ir al estado 19

    constanteString  ir al estado 20


estado 3

   23 salida: GET . ID PUNTO_Y_COMA

    ID  desplazar e ir al estado 21


estado 4

   25 decision: IF . P_A condicion P_C L_A sentencia L_C
   28         | IF . P_A condicion P_C L_A sentencia L_C $@2 ELSE $@3 L_A sentencia L_C

    P_A  desplazar e ir al estado 22


estado 5

   24 iteracion: WHILE . P_A condicion P_C L_A sentencia L_C

    P_A  desplazar e ir al estado 23


estado 6

    6 sentencia: ID . ASIG_ESP ID
   19 asignacion: ID . OP_ASIG expresion
   20           | ID . OP_ASIG constanteString

    ASIG_ESP  desplazar e ir al estado 24
    OP_ASIG   desplazar e ir al estado 25


estado 7

   55 let: LET_SIM . cont_ids OP_IGUAL P_A cont_exp P_C

    ID  desplazar e ir al estado 26

    cont_ids  ir al estado 27


estado 8

    0 $accept: programa . $end

    $end  desplazar e ir al estado 28


estado 9

    1 programa: program .
    3 program: program . sentencia

    DEFVAR   desplazar e ir al estado 1
    DISPLAY  desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    IF       desplazar e ir al estado 4
    WHILE    desplazar e ir al estado 5
    ID       desplazar e ir al estado 6
    LET_SIM  desplazar e ir al estado 7

    $default  reduce usando la regla 1 (programa)

    sentencia   ir al estado 29
    asignacion  ir al estado 11
    entrada     ir al estado 12
    salida      ir al estado 13
    iteracion   ir al estado 14
    decision    ir al estado 15
    let         ir al estado 16


estado 10

    2 program: sentencia .

    $default  reduce usando la regla 2 (program)


estado 11

    7 sentencia: asignacion . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 30


estado 12

   11 sentencia: entrada .

    $default  reduce usando la regla 11 (sentencia)


estado 13

   12 sentencia: salida .

    $default  reduce usando la regla 12 (sentencia)


estado 14

    9 sentencia: iteracion .

    $default  reduce usando la regla 9 (sentencia)


estado 15

    8 sentencia: decision .

    $default  reduce usando la regla 8 (sentencia)


estado 16

   10 sentencia: let .

    $default  reduce usando la regla 10 (sentencia)


estado 17

    5 sentencia: DEFVAR $@1 . declaraciones ENDDEF

    INT    desplazar e ir al estado 31
    FLOAT  desplazar e ir al estado 32

    declaraciones  ir al estado 33
    declaracion    ir al estado 34


estado 18

   54 constanteString: CONST_STR .

    $default  reduce usando la regla 54 (constanteString)


estado 19

   21 entrada: DISPLAY ID . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 35


estado 20

   22 entrada: DISPLAY constanteString . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 36


estado 21

   23 salida: GET ID . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 37


estado 22

   25 decision: IF P_A . condicion P_C L_A sentencia L_C
   28         | IF P_A . condicion P_C L_A sentencia L_C $@2 ELSE $@3 L_A sentencia L_C

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 40
    NOT         desplazar e ir al estado 41
    ID          desplazar e ir al estado 42

    condicion          ir al estado 43
    expresion          ir al estado 44
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 23

   24 iteracion: WHILE P_A . condicion P_C L_A sentencia L_C

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 40
    NOT         desplazar e ir al estado 41
    ID          desplazar e ir al estado 42

    condicion          ir al estado 48
    expresion          ir al estado 44
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 24

    6 sentencia: ID ASIG_ESP . ID

    ID  desplazar e ir al estado 49


estado 25

   19 asignacion: ID OP_ASIG . expresion
   20           | ID OP_ASIG . constanteString

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    CONST_STR   desplazar e ir al estado 18
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 51
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47
    constanteString    ir al estado 52


estado 26

   57 cont_ids: ID .

    $default  reduce usando la regla 57 (cont_ids)


estado 27

   55 let: LET_SIM cont_ids . OP_IGUAL P_A cont_exp P_C
   56 cont_ids: cont_ids . COMA ID

    COMA      desplazar e ir al estado 53
    OP_IGUAL  desplazar e ir al estado 54


estado 28

    0 $accept: programa $end .

    $default  aceptar


estado 29

    3 program: program sentencia .

    $default  reduce usando la regla 3 (program)


estado 30

    7 sentencia: asignacion PUNTO_Y_COMA .

    $default  reduce usando la regla 7 (sentencia)


estado 31

   15 declaracion: INT . DOSPUNTOS lista_ids

    DOSPUNTOS  desplazar e ir al estado 55


estado 32

   16 declaracion: FLOAT . DOSPUNTOS lista_ids

    DOSPUNTOS  desplazar e ir al estado 56


estado 33

    5 sentencia: DEFVAR $@1 declaraciones . ENDDEF
   14 declaraciones: declaraciones . declaracion

    ENDDEF  desplazar e ir al estado 57
    INT     desplazar e ir al estado 31
    FLOAT   desplazar e ir al estado 32

    declaracion  ir al estado 58


estado 34

   13 declaraciones: declaracion .

    $default  reduce usando la regla 13 (declaraciones)


estado 35

   21 entrada: DISPLAY ID PUNTO_Y_COMA .

    $default  reduce usando la regla 21 (entrada)


estado 36

   22 entrada: DISPLAY constanteString PUNTO_Y_COMA .

    $default  reduce usando la regla 22 (entrada)


estado 37

   23 salida: GET ID PUNTO_Y_COMA .

    $default  reduce usando la regla 23 (salida)


estado 38

   53 constanteNumerica: CONST_REAL .

    $default  reduce usando la regla 53 (constanteNumerica)


estado 39

   52 constanteNumerica: CONST_INT .

    $default  reduce usando la regla 52 (constanteNumerica)


estado 40

   35 condicion: P_A . condicion P_C AND P_A condicion P_C
   36          | P_A . condicion P_C OR P_A condicion P_C
   49 factor: P_A . expresion P_C

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 40
    NOT         desplazar e ir al estado 41
    ID          desplazar e ir al estado 42

    condicion          ir al estado 59
    expresion          ir al estado 60
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 41

   37 condicion: NOT . expresion CMP_MAY expresion
   38          | NOT . expresion CMP_MEN expresion
   39          | NOT . expresion CMP_MAYI expresion
   40          | NOT . expresion CMP_MENI expresion
   41          | NOT . expresion CMP_DIST expresion
   42          | NOT . expresion CMP_IGUAL expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 61
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 42

   50 factor: ID .

    $default  reduce usando la regla 50 (factor)


estado 43

   25 decision: IF P_A condicion . P_C L_A sentencia L_C
   28         | IF P_A condicion . P_C L_A sentencia L_C $@2 ELSE $@3 L_A sentencia L_C

    P_C  desplazar e ir al estado 62


estado 44

   29 condicion: expresion . CMP_MAY expresion
   30          | expresion . CMP_MEN expresion
   31          | expresion . CMP_MAYI expresion
   32          | expresion . CMP_MENI expresion
   33          | expresion . CMP_DIST expresion
   34          | expresion . CMP_IGUAL expresion
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    CMP_MAY    desplazar e ir al estado 63
    CMP_MEN    desplazar e ir al estado 64
    CMP_MAYI   desplazar e ir al estado 65
    CMP_MENI   desplazar e ir al estado 66
    CMP_DIST   desplazar e ir al estado 67
    CMP_IGUAL  desplazar e ir al estado 68
    OP_SUM     desplazar e ir al estado 69
    OP_RES     desplazar e ir al estado 70


estado 45

   45 expresion: termino .
   46 termino: termino . OP_MUL factor
   47        | termino . OP_DIV factor

    OP_DIV  desplazar e ir al estado 71
    OP_MUL  desplazar e ir al estado 72

    $default  reduce usando la regla 45 (expresion)


estado 46

   48 termino: factor .

    $default  reduce usando la regla 48 (termino)


estado 47

   51 factor: constanteNumerica .

    $default  reduce usando la regla 51 (factor)


estado 48

   24 iteracion: WHILE P_A condicion . P_C L_A sentencia L_C

    P_C  desplazar e ir al estado 73


estado 49

    6 sentencia: ID ASIG_ESP ID .

    $default  reduce usando la regla 6 (sentencia)


estado 50

   49 factor: P_A . expresion P_C

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 74
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 51

   19 asignacion: ID OP_ASIG expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 19 (asignacion)


estado 52

   20 asignacion: ID OP_ASIG constanteString .

    $default  reduce usando la regla 20 (asignacion)


estado 53

   56 cont_ids: cont_ids COMA . ID

    ID  desplazar e ir al estado 75


estado 54

   55 let: LET_SIM cont_ids OP_IGUAL . P_A cont_exp P_C

    P_A  desplazar e ir al estado 76


estado 55

   15 declaracion: INT DOSPUNTOS . lista_ids

    ID  desplazar e ir al estado 77

    lista_ids  ir al estado 78


estado 56

   16 declaracion: FLOAT DOSPUNTOS . lista_ids

    ID  desplazar e ir al estado 77

    lista_ids  ir al estado 79


estado 57

    5 sentencia: DEFVAR $@1 declaraciones ENDDEF .

    $default  reduce usando la regla 5 (sentencia)


estado 58

   14 declaraciones: declaraciones declaracion .

    $default  reduce usando la regla 14 (declaraciones)


estado 59

   35 condicion: P_A condicion . P_C AND P_A condicion P_C
   36          | P_A condicion . P_C OR P_A condicion P_C

    P_C  desplazar e ir al estado 80


estado 60

   29 condicion: expresion . CMP_MAY expresion
   30          | expresion . CMP_MEN expresion
   31          | expresion . CMP_MAYI expresion
   32          | expresion . CMP_MENI expresion
   33          | expresion . CMP_DIST expresion
   34          | expresion . CMP_IGUAL expresion
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino
   49 factor: P_A expresion . P_C

    P_C        desplazar e ir al estado 81
    CMP_MAY    desplazar e ir al estado 63
    CMP_MEN    desplazar e ir al estado 64
    CMP_MAYI   desplazar e ir al estado 65
    CMP_MENI   desplazar e ir al estado 66
    CMP_DIST   desplazar e ir al estado 67
    CMP_IGUAL  desplazar e ir al estado 68
    OP_SUM     desplazar e ir al estado 69
    OP_RES     desplazar e ir al estado 70


estado 61

   37 condicion: NOT expresion . CMP_MAY expresion
   38          | NOT expresion . CMP_MEN expresion
   39          | NOT expresion . CMP_MAYI expresion
   40          | NOT expresion . CMP_MENI expresion
   41          | NOT expresion . CMP_DIST expresion
   42          | NOT expresion . CMP_IGUAL expresion
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    CMP_MAY    desplazar e ir al estado 82
    CMP_MEN    desplazar e ir al estado 83
    CMP_MAYI   desplazar e ir al estado 84
    CMP_MENI   desplazar e ir al estado 85
    CMP_DIST   desplazar e ir al estado 86
    CMP_IGUAL  desplazar e ir al estado 87
    OP_SUM     desplazar e ir al estado 69
    OP_RES     desplazar e ir al estado 70


estado 62

   25 decision: IF P_A condicion P_C . L_A sentencia L_C
   28         | IF P_A condicion P_C . L_A sentencia L_C $@2 ELSE $@3 L_A sentencia L_C

    L_A  desplazar e ir al estado 88


estado 63

   29 condicion: expresion CMP_MAY . expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 89
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 64

   30 condicion: expresion CMP_MEN . expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 90
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 65

   31 condicion: expresion CMP_MAYI . expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 91
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 66

   32 condicion: expresion CMP_MENI . expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 92
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 67

   33 condicion: expresion CMP_DIST . expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 93
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 68

   34 condicion: expresion CMP_IGUAL . expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 94
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 69

   43 expresion: expresion OP_SUM . termino

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    termino            ir al estado 95
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 70

   44 expresion: expresion OP_RES . termino

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    termino            ir al estado 96
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 71

   47 termino: termino OP_DIV . factor

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    factor             ir al estado 97
    constanteNumerica  ir al estado 47


estado 72

   46 termino: termino OP_MUL . factor

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    factor             ir al estado 98
    constanteNumerica  ir al estado 47


estado 73

   24 iteracion: WHILE P_A condicion P_C . L_A sentencia L_C

    L_A  desplazar e ir al estado 99


estado 74

   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino
   49 factor: P_A expresion . P_C

    P_C     desplazar e ir al estado 81
    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70


estado 75

   56 cont_ids: cont_ids COMA ID .

    $default  reduce usando la regla 56 (cont_ids)


estado 76

   55 let: LET_SIM cont_ids OP_IGUAL P_A . cont_exp P_C

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 100
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47
    cont_exp           ir al estado 101


estado 77

   17 lista_ids: ID .

    $default  reduce usando la regla 17 (lista_ids)


estado 78

   15 declaracion: INT DOSPUNTOS lista_ids .
   18 lista_ids: lista_ids . PUNTO_Y_COMA ID

    PUNTO_Y_COMA  desplazar e ir al estado 102

    $default  reduce usando la regla 15 (declaracion)


estado 79

   16 declaracion: FLOAT DOSPUNTOS lista_ids .
   18 lista_ids: lista_ids . PUNTO_Y_COMA ID

    PUNTO_Y_COMA  desplazar e ir al estado 102

    $default  reduce usando la regla 16 (declaracion)


estado 80

   35 condicion: P_A condicion P_C . AND P_A condicion P_C
   36          | P_A condicion P_C . OR P_A condicion P_C

    AND  desplazar e ir al estado 103
    OR   desplazar e ir al estado 104


estado 81

   49 factor: P_A expresion P_C .

    $default  reduce usando la regla 49 (factor)


estado 82

   37 condicion: NOT expresion CMP_MAY . expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 105
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 83

   38 condicion: NOT expresion CMP_MEN . expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 106
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 84

   39 condicion: NOT expresion CMP_MAYI . expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 107
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 85

   40 condicion: NOT expresion CMP_MENI . expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 108
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 86

   41 condicion: NOT expresion CMP_DIST . expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 109
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 87

   42 condicion: NOT expresion CMP_IGUAL . expresion

    CONST_REAL  desplazar e ir al estado 38
    CONST_INT   desplazar e ir al estado 39
    P_A         desplazar e ir al estado 50
    ID          desplazar e ir al estado 42

    expresion          ir al estado 110
    termino            ir al estado 45
    factor             ir al estado 46
    constanteNumerica  ir al estado 47


estado 88

   25 decision: IF P_A condicion P_C L_A . sentencia L_C
   28         | IF P_A condicion P_C L_A . sentencia L_C $@2 ELSE $@3 L_A sentencia L_C

    DEFVAR   desplazar e ir al estado 1
    DISPLAY  desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    IF       desplazar e ir al estado 4
    WHILE    desplazar e ir al estado 5
    ID       desplazar e ir al estado 6
    LET_SIM  desplazar e ir al estado 7

    sentencia   ir al estado 111
    asignacion  ir al estado 11
    entrada     ir al estado 12
    salida      ir al estado 13
    iteracion   ir al estado 14
    decision    ir al estado 15
    let         ir al estado 16


estado 89

   29 condicion: expresion CMP_MAY expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 29 (condicion)


estado 90

   30 condicion: expresion CMP_MEN expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 30 (condicion)


estado 91

   31 condicion: expresion CMP_MAYI expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 31 (condicion)


estado 92

   32 condicion: expresion CMP_MENI expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 32 (condicion)


estado 93

   33 condicion: expresion CMP_DIST expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 33 (condicion)


estado 94

   34 condicion: expresion CMP_IGUAL expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 34 (condicion)


estado 95

   43 expresion: expresion OP_SUM termino .
   46 termino: termino . OP_MUL factor
   47        | termino . OP_DIV factor

    OP_DIV  desplazar e ir al estado 71
    OP_MUL  desplazar e ir al estado 72

    $default  reduce usando la regla 43 (expresion)


estado 96

   44 expresion: expresion OP_RES termino .
   46 termino: termino . OP_MUL factor
   47        | termino . OP_DIV factor

    OP_DIV  desplazar e ir al estado 71
    OP_MUL  desplazar e ir al estado 72

    $default  reduce usando la regla 44 (expresion)


estado 97

   47 termino: termino OP_DIV factor .

    $default  reduce usando la regla 47 (termino)


estado 98

   46 termino: termino OP_MUL factor .

    $default  reduce usando la regla 46 (termino)


estado 99

   24 iteracion: WHILE P_A condicion P_C L_A . sentencia L_C

    DEFVAR   desplazar e ir al estado 1
    DISPLAY  desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    IF       desplazar e ir al estado 4
    WHILE    desplazar e ir al estado 5
    ID       desplazar e ir al estado 6
    LET_SIM  desplazar e ir al estado 7

    sentencia   ir al estado 112
    asignacion  ir al estado 11
    entrada     ir al estado 12
    salida      ir al estado 13
    iteracion   ir al estado 14
    decision    ir al estado 15
    let         ir al estado 16


estado 100

   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino
   59 cont_exp: expresion .

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 59 (cont_exp)


estado 101

   55 let: LET_SIM cont_ids OP_IGUAL P_A cont_exp . P_C
   58 cont_exp: cont_exp . PUNTO_Y_COMA expresion

    P_C           desplazar e ir al estado 113
    PUNTO_Y_COMA  desplazar e ir al estado 114


estado 102

   18 lista_ids: lista_ids PUNTO_Y_COMA . ID

    ID  desplazar e ir al estado 115


estado 103

   35 condicion: P_A condicion P_C AND . P_A condicion P_C

    P_A  desplazar e ir al estado 116


estado 104

   36 condicion: P_A condicion P_C OR . P_A condicion P_C

    P_A  desplazar e ir al estado 117


estado 105

   37 condicion: NOT expresion CMP_MAY expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 37 (condicion)


estado 106

   38 condicion: NOT expresion CMP_MEN expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 38 (condicion)


estado 107

   39 condicion: NOT expresion CMP_MAYI expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 39 (condicion)


estado 108

   40 condicion: NOT expresion CMP_MENI expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 40 (condicion)


estado 109

   41 condicion: NOT expresion CMP_DIST expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 69
    OP_RES  desplazar e ir al estado 70

    $default  reduce usando la regla 41 (condicion)


estado 110

   42 condicion: NOT expresion CMP_IGUAL expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino
